--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
     "drei": "^2.2.21",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
+    "react-modal-video": "^2.0.0",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
