profile added and configured with firebase

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "drei": "^2.2.21",
+    "express": "^4.18.2",
+    "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
+    "mongoose": "^7.2.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-modal-video": "^2.0.0",
