--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
+    "googleapis": "^118.0.0",
+    "ics": "^3.1.0",
     "mongoose": "^7.2.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
